add findAllOrderFromUser function