@@ -1,8 +1,6 @@
 package com.example.orderservice.service;
 
-import com.example.orderservice.dto.FoodResponse;
-import com.example.orderservice.dto.OrderLineItemDto;
-import com.example.orderservice.dto.OrderRequest;
+import com.example.orderservice.dto.*;
 import com.example.orderservice.model.Order;
 import com.example.orderservice.model.OrderLineItems;
 import com.example.orderservice.model.Users;
@@ -10,25 +8,27 @@ import com.example.orderservice.repository.OrderLineItemsRepository;
 import com.example.orderservice.repository.OrderRepository;
 import com.example.orderservice.repository.UsersRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.stereotype.Service;
+import org.springframework.web.reactive.function.client.WebClient;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 @RequiredArgsConstructor
 public class OrderService {
 
     private final UsersRepository usersRepository;
     private final OrderRepository orderRepository;
     private final OrderLineItemsRepository orderLineItemsRepository;
+    private final WebClient.Builder webClientBuilder;
 
-    public ResponseEntity<String> placeOrder(String username, OrderRequest request){
+    public ResponseEntity<String> placeOrder(String username, OrderRequest request) {
         Users users = usersRepository.findByUsername(username).orElseThrow();
         Order order = new Order();
         LocalDateTime dateTime = LocalDateTime.now().withSecond(0);
@@ -41,35 +41,50 @@ public class OrderService {
         orderRepository.save(order);
         orderLineItemsRepository.saveAll(orderLineItemsList);
 
-        return  ResponseEntity.status(201).body("place order successfully");
+        return ResponseEntity.status(201).body("place order successfully");
     }
 
-    public List<FoodResponse> findAllOrderFromUserId(String username){
+    public List<OrderInfo> findAllOrderFromUser(String username) {
         Users users = usersRepository.findByUsername(username).orElseThrow();
         List<Order> orderList = orderRepository.findAllOrderByUser(users.getId()).orElseThrow();
-        List<UUID> orderid = orderList.stream().map(Order::getId).toList();
-        List<FoodResponse> foodResponses = new ArrayList<>();
-        for(UUID orderId : orderid){
-            foodResponses.add(mapToDto(orderId));
+        List<UUID> orderIdList = orderList.stream().map(Order::getId).toList();
+        List<OrderInfo> orderInfoList = new ArrayList<>();
+
+        for (UUID orderId : orderIdList) {
+            FoodRequest foodRequest = new FoodRequest();
+            foodRequest.setFoodIdRequestList(mapToDto(orderId));
+
+
+            List<FoodResponse> foodResponseList = webClientBuilder.build().post()
+                    .uri("http://food-service/food/foodId")
+                    .bodyValue(foodRequest)
+                    .retrieve()
+                    .bodyToMono(List.class)
+                    .block();
+
+            OrderInfo orderInfo = new OrderInfo();
+            orderInfo.setOrder_id(orderId);
+            orderInfo.setFoodResponseList(foodResponseList);
+            orderInfoList.add(orderInfo);
         }
 
-
-
-        return foodResponses;
-
-
+        return orderInfoList;
     }
-    public FoodResponse mapToDto(UUID order_id){
+
+
+    public List<FoodIdRequest> mapToDto(UUID order_id) {
         List<OrderLineItems> orderLineItems = orderLineItemsRepository.findOrderLineItemsByOrderId(order_id).orElseThrow();
-        FoodResponse foodResponse = FoodResponse.builder()
-                .order_id(order_id)
-                .foodIdList(orderLineItems.stream().map(OrderLineItems::getFood_id).collect(Collectors.toList()))
-                .build();
-        return foodResponse;
+        List<FoodIdRequest> foodIdRequest = orderLineItems.stream()
+                .map(orderLineItem -> FoodIdRequest.builder()
+                        .food_id(orderLineItem.getFood_id())
+                        .build())
+                .toList();
+        return foodIdRequest;
     }
 
 
-    public OrderLineItems mapToOrderLineItems(Order order, OrderLineItemDto orderLineItemDto){
+
+    public OrderLineItems mapToOrderLineItems(Order order, OrderLineItemDto orderLineItemDto) {
         OrderLineItems orderLineItems = OrderLineItems.builder()
                 .id(UUID.randomUUID())
                 .food_id(orderLineItemDto.getId())
